--- a/README.adoc
+++ b/README.adoc
@@ -101,13 +101,7 @@ Then, click `Generate Project`, which downloads the starter project as `inventor
 
 Next, extract the `inventory.zip` file to the `guide-liberty-deepdive-gradle/start/inventory` directory.
 
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 Use Powershell for the following commands:
@@ -182,13 +176,7 @@ endif::[]
 
 Build and deploy the `inventory` microservice to Liberty by running the Gradle `libertyRun` task:
 
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -220,13 +208,7 @@ While the server starts up, various messages display in your command-line sessio
 
 When you need to stop the server, press `CTRL+C` in the command-line session where you ran the server, or run the `libertyStop` goal from the `start/inventory` directory in another command-line session:
 
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -248,13 +230,7 @@ gradlew libertyStop
 
 Although you can start and stop the server in the foreground by using the Gradle `libertyRun` task, you can also start and stop the server in the background with the Gradle `libertyStart` and `libertyStop` goals:
 
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -279,13 +255,7 @@ The Liberty Gradle plug-in includes a `dev` task that listens for any changes in
 
 If the Liberty server is running, stop it and restart it in dev mode by running the `libertyDev` goal in the `start/inventory` directory:
 
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -341,13 +311,7 @@ This `Inventory` class stores a record of all systems and their system propertie
 Create the `model` subdirectory, then create the `SystemData` class. The `SystemData` class is a Plain Old Java Object (POJO) that represents a single inventory entry. 
 
 ifndef::cloud-hosted[]
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -690,13 +654,7 @@ Update the [hotspot=printClientPort file=0]`POST` request so that the `/client/{
 Define the configurable variables in the `microprofile-config.properties` configuration file for MicroProfile Config at the `src/main/resources/META-INF` directory.
 
 ifndef::cloud-hosted[]
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -924,13 +882,7 @@ The `system` microservice is provided for you.
 Create the `client` subdirectory. Then, create a RESTful client interface for the `system` microservice in the `inventory` microservice.
 
 ifndef::cloud-hosted[]
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -1054,13 +1006,7 @@ The [hotspot=keyStore file=0]`keyStore` element is used to define the repository
 Because the keystore file is not provided at the `src` directory, Liberty creates a Public Key Cryptography Standards #12 (PKCS12) keystore file for you by default. This file needs to be replaced, as the [hotspot=keyStore file=0]`keyStore` configuration must be the same in both `system` and `inventory` microservices. As the configured `system` microservice is already provided for you, copy the `key.p12` keystore file from the `system` microservice to your `inventory` service.
 
 ifndef::cloud-hosted[]
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -1106,13 +1052,8 @@ include::finish/module-jwt/build.gradle[]
 Configure the client https port by setting the [hotspot=https file=2]`liberty.server.var.'client.https.port'` to `9444`.
 
 In your dev mode console for the `inventory` microservice, press `CTRL+C` to stop the server. Then, restart the dev mode of the `inventory` microservice.
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
 
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -1142,13 +1083,7 @@ After you see the following message, your application server in dev mode is read
 Open another command-line session and run the `system` microservice from the `finish` directory.
 
 ifndef::cloud-hosted[]
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -1272,13 +1207,7 @@ A readiness check allows third-party services, such as Kubernetes, to determine 
 Create the `health` subdirectory before creating the health check classes.
 
 ifndef::cloud-hosted[]
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
@@ -1573,13 +1502,7 @@ cd /home/project/guide-liberty-deep-dive-gradle/start/inventory
 endif::[]
 
 
-[.tab_link.windows_link]
-`*WINDOWS*`
-[.tab_link.mac_link]
-`*MAC*`
-[.tab_link.linux_link]
-`*LINUX*`
-
+include::{common-includes}/os-tabs.adoc[]
 [.tab_content.windows_section]
 --
 [role='command']
