--- a/README.adoc
+++ b/README.adoc
@@ -853,19 +853,19 @@ include::finish/module-persisting-data/src/main/liberty/config/server.xml[]
 
 The [hotspot=postgresqlLibrary file=1]`library` element tells the Liberty server where to find the PostgreSQL library. The [hotspot=dataSource file=1]`dataSource` element points to where the Java Database Connectivity (JDBC) driver connects, along with some database vendor-specific properties. For more information, see the https://www.openliberty.io/docs/latest/relational-database-connections-JDBC.html#_data_source_configuration[Data source configuration^] and https://www.openliberty.io/docs/latest/reference/config/dataSource.html[dataSource element^] documentation.
 
-To use a PostgreSQL database, you need to download its library and store it to the Liberty shared resources directory. Configure the Liberty Maven plug-in in the `pom.xml` file.
+To use a PostgreSQL database, you need to download its library and store it to the Liberty shared resources directory. Configure the Liberty Maven plug-in in the `build.gradle` file.
 
 [role='code_command hotspot file=2', subs="quotes"]
 ----
-#Replace the `pom.xml` configuration file.#
-`pom.xml`
+#Replace the `build.gradle` file.#
+`build.gradle`
 ----
 
 // File 2
-pom.xml
-[source, xml, linenums, role='code_column hide_tags=copyright']
+build.gradle
+[source, gradle, linenums, role='code_column']
 ----
-include::finish/module-persisting-data/pom.xml[]
+include::finish/module-persisting-data/build.gradle[]
 ----
 
 The [hotspot=postgresql file=2]`postgresql` dependency ensures that Maven downloads the PostgreSQL library to local project. The [hotspot=copyDependencies file=2]`copyDependencies` configuration tells the Liberty Maven plug-in to copy the library to the Liberty shared resources directory.
